// Copyright 2020 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.apigee.registry.applications.v1alpha1;

option java_package = "com.google.cloud.apigee.registry.applications.v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "RegistryLintProto";
option go_package = "github.com/apigee/registry/rpc;rpc";

// Lint wraps the result of a linter run for an API.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message Lint {
  // The name of the result.
  string name = 1;

  // The lint results for each file examined.
  repeated LintFile files = 2;
}

// LintFile wraps the result of a linter run for a file.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message LintFile {
    // The path of the file linted.
    string file_path = 1;

    // The problems found when the file was linted.
    repeated LintProblem problems = 2;
}

// LintProblem represents a problem found by a linter.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message LintProblem {
    // A message describing the problem.
    string message = 1;

    // An identifier for a related design rule.
    string rule_id = 2;

    // A link for a related design rule.
    string rule_doc_uri = 3;

    // A suggestion for resolving the problem.
    string suggestion = 4;

    // The location in the file of the problem.
    LintLocation location = 5;
}

// LintLocation represents a range of text in a file.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message LintLocation {
    // The initial position of a problem.
    LintPosition start_position = 1;

    // The end position of a problem.
    LintPosition end_position = 2;
}

// LintPosition represents a point in a file.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message LintPosition {
    // A line number in a file.
    int32 line_number = 1;

    // A column number in a file.
    int32 column_number = 2;
}

// LintStats summarizes linter results.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message LintStats {
    // Problems found in linting.
    repeated LintProblemCount problem_counts = 1;
}

// LintProblemCount represents the number of times a problem was found in linting.
// (-- api-linter: core::0123::resource-annotation=disabled
//     aip.dev/not-precedent: This message is not currently used in an API. --)
message LintProblemCount {
    // The number of occurrences of the problem.
    int32 count = 1;

    // An identifier for the related design rule.
    string rule_id = 2;

    // A link for the related design rule.
    string rule_doc_uri = 3;
}